Fix SignUp page background z-index

--- a/src/pages/SignUp.css
+++ b/src/pages/SignUp.css
@@ -6,6 +6,15 @@
   overflow: hidden;
 }
 
+.background-pattern {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+}
+
 .sign-up-card {
   position: absolute;
   width: 312px;
